Fixed question height to avoid jumpiness

--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,7 @@ body {
 .question {
   margin: 0;
   padding: 0.5rem 2.5rem 1.5rem 2.5rem;
+  height: 100px;
   font-family: 'Jost-Regular', sans-serif;
 }
 
